test: fix sonar warnings